--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,17 @@
     <string name="app_name">MeijerCouponList</string>
     <string name="coupon_image">coupon image</string>
     <string name="coupon_clip_button">
-        <u><b>Clip</b></u>
+        <u>
+            <b>Clip</b>
+        </u>
     </string>
-    <string name="coupon_total">Total: </string>
+    <string name="coupon_total">Total:</string>
     <string name="pager_title_available">Available</string>
     <string name="pager_title_clip">Clipped</string>
     <string name="pager_title">Title</string>
+    <string name="coupon_clip_button_unclip">
+        <u>
+            <b>Unclip</b>
+        </u>
+    </string>
 </resources>
